k3s/overlays/prd/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okard-backend
spec:
  replicas: 2
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-secret
