k3s/overlays/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okard-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Or if you use NGINX:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: api.081246.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okard-backend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - api.081246.xyz
      secretName: okard-backend-tls
